# dbx-unifiedchat

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_DIAGRAM_UPDATE_SUMMARY.md  ARCHITECTURE_FILES_LIST.txt  ARCHITECTURE_INDEX.md  ARCHITECTURE_QUICK_START.md  BEFORE_AFTER_VISUAL.md  CLARIFICATION_LOGIC_SUMMARY.md  CLARIFICATION_NO_RECLARIFY_COMPLETE.md  CLARIFICATION_PROTECTION_LAYERS.md  CLARIFICATION_RESPONSE_DETECTION_FIX.md  CODEOWNERS.txt  CONTRIBUTING.md  CONVERSATION_MANAGEMENT_TEST_CASES.md  CONVERSATION_MIGRATION_GUIDE.md  CONVERSATION_OVERHAUL_SUMMARY.md  DATABRICKS_SOLUTIONS_COMPLIANCE_REPORT.md  DEPLOYMENT_FIX_INSTRUCTIONS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_RESOURCES_UPDATE.md  DIAGRAM_FILES_SUMMARY.md  FINAL_SUMMARY.md  GIT_TRACKING_UPDATE.md  GRANULAR_STREAMING_FIX.md  JSON_SERIALIZATION_BULLETPROOF_FIX.md  JSON_SERIALIZATION_FIX.md  JSON_SERIALIZATION_FIX_COMPLETE.md  LICENSE  LICENSE.md  LLM_DIVERSIFICATION_IMPLEMENTATION_SUMMARY.md  NOTICE.md  PARALLEL_EXECUTION_STRATEGY.md  PARALLEL_EXECUTION_TOOL.md  PARALLEL_TOOL_REFACTORING.md  QUICKSTART_STREAMING_FEATURES.md  QUICK_START_SIMPLIFIED.md  README.md  RECOMMENDATION_SUMMARY.md  (+35 more)
.cursor/plans/: agent_performance_optimization_ed18a553.plan.md  agent_streaming_enhancement_3a5f3b76.plan.md  agent_system_dab_deployment_97fdac1d.plan.md  backend_job_integration_phase_2_b2cf8670.plan.md  consolidate_config_into_dabs_16f64666.plan.md  fix_navigation_and_state_persistence_0d99ddfa.plan.md  (+10 more)
Instructions/: 01_overall.md  07_SQL_VALIDATION_AGENT.md
Notebooks/: CLARIFICATION_FLOW_IMPROVEMENTS.md  COMPREHENSIVE_FINAL_MESSAGE_UPDATE.md  DISPLAY_NODE_IMPROVEMENTS.md  DISPLAY_NODE_REMOVAL_SUMMARY.md  MODEL_SERVING_API_GUIDE.md  MODEL_SERVING_INTEGRATION_SUMMARY.md  QUICK_REFERENCE_CLARIFICATION.md  README.md  SQL_RESULT_PROTECTION_SUMMARY.md  SQL_SYNTHESIS_MESSAGE_UPDATE.md  STATE_INITIALIZATION_GUIDE.md  SUMMARIZE_AGENT_STATE_PRESERVATION.md  Super_Agent.ipynb  Super_Agent_Simplified.py  Super_Agent_hybrid.py  Super_Agent_hybrid_local_dev.py  Super_Agent_hybrid_no_lakebase.py  VECTOR_SEARCH_AND_DATAFRAME_FIX.md  agent.py  agent_uc_functions.py  deploy_agent.py  notebook_utils.py  sql_validation_agent.py  test_agent_databricks.py  test_agent_databricks_interactive_notebook.py  test_sql_validation_agent.py  test_uc_functions.ipynb  test_uc_functions.py
Notebooks_Tested_On_Databricks/: test_uc_functions.py
agent_app/: .env.example  README.md  databricks.yml  pyproject.toml
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  CONFIGURATION.md  DBX_UnifiedChat_Presentation.md  DEPLOYMENT.md  DEVELOPMENT_GUIDE.md  ETL_GUIDE.md  LLM_GRAPHRAG_IMPLEMENTATION.md  LOCAL_DEVELOPMENT.md
etl/: 01_export_genie_spaces.py  02_enrich_table_metadata.py  03_build_vector_search_index.py  README.md  local_dev_etl.py  test_etl.py
kumc_poc/: README.md  conversation_models.py  databricks.yml  intent_detection_service.py  pyproject.toml
resources/: agent_deploy.yml  etl_pipeline.yml  full_pipeline.yml
supplemental_scripts/: migrate_genie_rooms.py  run_agent_test_databricks.py  upload_to_databricks.py
tables_to_genies/: DEPLOYMENT_SUMMARY.md
tables_to_genies_apx/: .databricksignore  APX_FRONTEND_COMPLETE.md  ARCHITECTURE.md  DEPLOYMENT.md  DEPLOYMENT_STEPS.md  DEV_SETUP.md  LOCALHOST_FIX.md  QUICKSTART.md  README.md  RUNNING_LOCALLY.md  app.yaml  requirements.txt  run-dev.sh
tests/: README.md  conftest.py
(+156 files in other folders)
